Fixat alignment på legender för detaljvyn.

--- a/statistics-web/src/main/webapp/css/inera-statistics.css
+++ b/statistics-web/src/main/webapp/css/inera-statistics.css
@@ -893,21 +893,9 @@ div.accordion-body.in.collapse > div.accordion-heading a.accordion-toggle{
 .header-box-user-profile .btn-group .dropdown-menu li a{
 	color: #000 !important;
 }
-/*#navigation-container .btn, #view .btn {
-	color: #ffffff;
-	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-	background-color: #363636;
-	background-image: -moz-linear-gradient(top, #444444, #222222);
-	background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#444444), to(#222222));
-	background-image: -webkit-linear-gradient(top, #444444, #222222);
-	background-image: -o-linear-gradient(top, #444444, #222222);
-	background-image: linear-gradient(to bottom, #444444, #222222);
-	background-repeat: repeat-x;
-	border-color: #222222 #222222 #000000;
-	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-	/*filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff444444', endColorstr='#ff222222', GradientType=0);
-	filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);*/
-}*/
+.legend-btn-group {
+	width: 100%;
+}
 
 #view .btn.statistic-btn:hover, #view .btn.statistic-btn.btn-large:hover { background-color: #000; }
 
